--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "rehabilitation-center-backend",
+  "name": "barber-shop-backend",
   "version": "1.0.0",
-  "description": "Backend for the Rehabilitation Center application",
+  "description": "Backend for the barber shop application",
   "main": "server.ts",
   "scripts": {
-    "start": "ts-node server.ts",
+    "start": "node ./dist/server.js",
     "dev": "nodemon server.ts",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.json",
+    "postinstall": "npm run build",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -15,16 +18,16 @@
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.8.7"
-  },
-  "devDependencies": {
+    "mongoose": "^7.8.7",
+    "typescript": "^5.9.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.24",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^18.15.11",
+    "@types/node": "^18.15.11"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   }
 }
