--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: barber-shop-backend
     env: node
     buildCommand: npm install && npm run build
-    startCommand: node dist/server.js
+    startCommand: node ./dist/server.js
     envVars:
       - key: NODE_ENV
         value: production
